; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/hptrr/extr_hptrr_os_bsd.c_freelist_put_dma.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/hptrr/extr_hptrr_os_bsd.c_freelist_put_dma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.freelist = type { i8*, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @freelist_put_dma(%struct.freelist* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.freelist*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.freelist* %0, %struct.freelist** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.freelist*, %struct.freelist** %4, align 8
  %8 = getelementptr inbounds %struct.freelist, %struct.freelist* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @HPT_ASSERT(i32 %9)
  %11 = load %struct.freelist*, %struct.freelist** %4, align 8
  %12 = getelementptr inbounds %struct.freelist, %struct.freelist* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %12, align 8
  %15 = load %struct.freelist*, %struct.freelist** %4, align 8
  %16 = getelementptr inbounds %struct.freelist, %struct.freelist* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = bitcast i8* %18 to i8**
  store i8* %17, i8** %19, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load i8*, i8** %5, align 8
  %22 = bitcast i8* %21 to i8**
  %23 = getelementptr inbounds i8*, i8** %22, i64 1
  %24 = bitcast i8** %23 to i32*
  store i32 %20, i32* %24, align 4
  %25 = load i8*, i8** %5, align 8
  %26 = load %struct.freelist*, %struct.freelist** %4, align 8
  %27 = getelementptr inbounds %struct.freelist, %struct.freelist* %26, i32 0, i32 0
  store i8* %25, i8** %27, align 8
  ret void
}

declare dso_local i32 @HPT_ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
